# python_speech_recognition

./: .gitignore  pyproject.toml
app/domain/: models.py
app/interface/: writer.py
first_part_project/: load_mp3.py  plot_audio.py  record_mic.py  wave_example.py
second_part_project/: api_communication.py  main.py  model_assembly.py
tests/first_part_project/: load_mp3_test.py  mock.py  plot_audio_test.py  record_mic_test.py  testing.py  wave_example_test.py
tests/second_part_project/: api_communication_test.py
