[tool.poetry]
name = "python-speech-recognition"
version = "0.1.0"
description = ""
authors = ["Juliana Gutierrez <alejuli.0627@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
