[tool.poetry]
name = "python-speech-recognition"
version = "0.1.0"
description = ""
authors = ["Juliana Gutierrez <alejuli.0627@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pyaudio = "^0.2.14"
wave = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
